<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appWidget"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item"
    android:elevation="4dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:id="@+id/widget_container"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="false"
            android:focusable="false">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/home_icon"
                android:src="@drawable/no_icon"
                android:clickable="false"
                android:focusable="false"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/home_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/TeamNames"
                android:contentDescription="@string/home_team"
                android:layout_weight="1"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:textColor="#000"
                android:clickable="false"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="false"
            android:focusable="false">

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/current_score"
                android:gravity="center"
                android:textSize="@dimen/League"
                android:textColor="#000"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/date_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/match_time"
                android:gravity="center"
                android:textColor="#000"
                android:clickable="false"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="false"
            android:focusable="false">

            <ImageView
                android:id="@+id/away_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/away_icon"
                android:src="@drawable/no_icon"
                android:clickable="false"
                android:focusable="false"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/away_team"
                android:gravity="center"
                android:textSize="@dimen/TeamNames"
                android:layout_weight="1"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:textColor="#000"
                android:clickable="false"
                android:focusable="false"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>